Fix for bug 311583:

Not uneval(array) uses elision, not undefined, to represent array holes.
r=brendan